# universal-time-tracker

./: .gitignore  .pre-commit-config.yaml  .timecfg  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  RELEASE_v0.2.0_CHECKLIST.md  RELEASE_v0.2.0_SUMMARY.md  backdate_session.py  create_june19_sessions.py  create_sessions_final.py  db_manager.py  docker-compose.yml  move_sessions_to_dadm.py  pyproject.toml  pytest.ini  release_notes_v0.2.0.md  start_server.py  test_user_id.py
.github/workflows/: test.yml
cli/: requirements.txt  test_cli.py  test_historical_sessions.py  tt  tt.py
data/: timetracker.db  timetracker.db.bak
docs/: README.md  RELEASE_PROCEDURE.md  SIMPLIFIED_TIME_TRACKING_WITH_CONFIG.md  UNIVERSAL_TIME_TRACKING_SYSTEM_PROPOSAL.md  WORK_HOUR_TRACKING_SYSTEM_DESIGN.md  analytics.md  api_reference.md  cli_cheatsheet.md  configuration.md  database_management.md  docker_setup.md  historical-sessions.md  testing.md
scripts/: __init__.py  consolidate_categories.py  update_june19_timestamps.py
server/: Dockerfile  migrate_add_parent_id.py  requirements-dev.txt  requirements.txt
server/prompts/: ai_recommendations.txt
server/src/: app.py  conftest.py  db_browser.py  models.py  test_app.py
server/src/templates/: dashboard.html  index.html  prompt_editor.html
server/src/templates/db_browser/: base.html  edit_project.html  edit_session.html  export.html  index.html  project_detail.html  projects.html  search.html  session_detail.html  sessions.html
